# mic-toolkit

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: ci.yaml  publish_docs.yaml  publish_pypi.yaml
contributing/: index.html
docs/: contributing.md  index.md
mic_toolkit/: metrics.py
mic_toolkit/evals/: connect.py  evaluator.py  metrics.py
mic_toolkit/synthetic/: generation.py
synthetic/: index.html
tests/: synthetic_test.py  test_generation.py
