[tool.poetry]
name = "mic-toolkit"
version = "0.2.9"
description = "Internal toolkit for Microsoft Innovations Club VITC."
authors = ["Ameen Shaikh <mohammedameen9011@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
datasets = "^3.0.0"


[tool.poetry.group.dev.dependencies]
mkdocstrings = {extras = ["python"], version = "^0.26.1"}
mkdocs-material = "^9.5.34"
mkdocs = "^1.6.1"
pre-commit = "^3.8.0"
ipykernel = "^6.29.5"
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [
  "."
]