[tool.poetry]
name = "mic-toolkit"
version = "0.3.1"
description = "Simple synthetic data generation using LLMs."
authors = ["Ameen Shaikh <mohammedameen9011@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
datasets = "^3.0.0"
ollama = "^0.3.3"
tqdm = "^4.67.0"
onnx = "^1.17.0"
onnxruntime = "^1.20.1"
openai = "^1.59.8"
python-dotenv = "^1.0.1"
transformers = "^4.48.3"
torch = "^2.6.0"


[tool.poetry.group.dev.dependencies]
mkdocstrings = {extras = ["python"], version = "^0.26.1"}
mkdocs-material = {extras = ["imaging"], version = "^9.5.44"}
mkdocs = "^1.6.1"
pre-commit = "^3.8.0"
ipykernel = "^6.29.5"
pytest = "^8.3.3"
snakeviz = "^2.2.2"
tabulate = "^0.9.0"
ruff = "^0.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [
  "."
]